[Add CustomViewHandler]  - debug : lors de l ajout d une dépendance gérées par un dépôt custom, il faut aussi rajouter le chemin vers les vendor dans le psr  - utilisation d une lib de PBergman pour la génération de graph

--- a/app/app/config/config.yml
+++ b/app/app/config/config.yml
@@ -67,3 +67,7 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+fos_rest:
+    service:
+        view_handler:         app_bundle.view_handler
