--- a/app/app/config/services.yml
+++ b/app/app/config/services.yml
@@ -20,7 +20,7 @@ services:
         resource: '../../src/AppBundle/*'
         # you can exclude directories or files
         # but if a service is unused, it's removed anyway
-        exclude: '../../src/AppBundle/{Entity,Repository,Tests}'
+        exclude: '../../src/AppBundle/{Entity,Repository,Tests,View}'
 
     # controllers are imported separately to make sure they're public
     # and have a tag that allows actions to type-hint services
@@ -33,3 +33,14 @@ services:
     # AppBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+    
+    app_bundle.tree_handler:
+        class: AppBundle\View\TreeViewHandler
+
+    app_bundle.view_handler:
+        parent: fos_rest.view_handler.default
+        autowire: true
+        autoconfigure: false
+        public: false
+        calls:
+            - ['registerHandler', [ 'tree', [ '@app_bundle.tree_handler', 'createResponse'] ] ]
