--- a/app/composer.json
+++ b/app/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "": "src/"
+            "": "src/",
+            "PBergman\\" : "vendor/pbergman/tree-printer/src/PBergman"
         },
         "classmap": [
             "app/AppKernel.php",
@@ -19,6 +20,18 @@
             "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php"
         ]
     },
+    "repositories": [{
+        "type": "package",
+        "package": {
+            "name": "pbergman/tree-printer",
+            "version": "master",
+            "source": {
+                "url":  "https://github.com/pbergman/tree-printer.git",
+                "type": "git",
+                "reference": "master"
+            }
+        }
+    }],
     "require": {
         "php": ">=5.5.9",
         "doctrine/doctrine-bundle": "^1.6",
@@ -26,6 +39,7 @@
         "friendsofsymfony/rest-bundle": "^2.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "jms/serializer-bundle": "^2.0",
+        "pbergman/tree-printer": "dev-master",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.1.0",
