[ Json déserilisation Controller]  - route /api/users  - script ./post to call route  - add some error interceptor

--- a/app/app/config/config.yml
+++ b/app/app/config/config.yml
@@ -68,6 +68,19 @@ swiftmailer:
     password: '%mailer_password%'
     spool: { type: memory }
 
+sensio_framework_extra:
+    request: { converters: true }
+
 fos_rest:
     service:
         view_handler:         app_bundle.view_handler
+    body_converter:
+        enabled: true
+    view:
+        view_response_listener: force
+        formats:
+            json: true
+    format_listener: 
+        rules: 
+            - { path: '^/api', priorities: ['json'], fallback_format: json, prefer_extension: false } 
+            
